--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,21 +1,36 @@
 body{
-	background-color: #000;
-	color: #fff;
+
+	color: rgb(0, 0, 0);
 	margin: 0;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1rem;
+	background: linear-gradient(to bottom right,rgb(189, 132, 255), rgb(255, 255, 120));
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-attachment: fixed;
 }
-
+.titulo{
+	color: #000000;
+	font-family:cursive;
+	margin-top: -9px;
+	margin-bottom: 3px;
+}
 .conteudo{
+	background-position-y: -9px;
+	background-position-x: -6px;
+	background-image:url('https://thumbs.dreamstime.com/b/grade-pontilhada-teste-padr%C3%A3o-sem-emenda-com-pontos-reenchimento-simplificado-do-vetor-da-matriz-120236202.jpg');
 	margin: 0 auto;
 	width: 100%;
 	max-width: 450px;
 	margin-top: 50px;
 	margin-bottom: 50px;
-	background-color:  	#04004D;
+	background-color:  	#733d7528;
 	padding: 55px;
 	border-radius: 12px; 
+	box-shadow: 10px 15px #da7fec48;
+	
 }
+
 
 .topo{
 	display: flex;
@@ -27,23 +42,23 @@ body{
 	width: 350px;
 	padding: 15px ;
 	border-radius: 12px;
-	border: 1px solid #06007a;
+	border: 1px solid #f1d34c;
 	outline: none;
 	font-size: 1.2rem;
-	color: rgb(255, 255, 255);
-	background-color: #0500669c;
+	color: rgb(0, 0, 0);
+	background-color: #fff2b7bd;
 }
 
 .topo button{
 	width: 45px;
 	border-radius: 12px;
-	border: 1px solid #06007a;
-	background: #050235;
-	color: #fff;
+	border: 1px solid #f1d34c;
+	background: #fff9a0;
+	color: #000000;
 
 }
 .topo button:hover{
-	background: #2325A9;
+	background: #fff45b;
 	cursor: pointer;
 }
 
@@ -55,7 +70,7 @@ body{
 
 #listadorDeTarefas li{
 	padding: 20px;
-	background:#0500669c;
+	background:#fff2b7bd;
 	border-radius: 12px;
 	display: flex;
 	justify-content: space-between;
@@ -65,17 +80,17 @@ body{
 
 .btnAcao{
 	border-radius: 20px;
-	border: 1px solid #06007a;
+	border: 1px solid #f1d34c;
 	width: 38px;
 	height: 38px;
 	margin-right: 8px;
 	cursor: pointer;
-	background: #050235;
-	color: #fff;
+	background: #fff9a0;
+	color: rgb(0, 0, 0);
 	outline: none;
 }
 .btnAcao:hover{
-	background: #2325A9;
+	background: #fff45b;
 }
 
 .textoTarefa{
@@ -91,8 +106,8 @@ body{
 	left: 50%;
 	transform: translate(-50%, -50%);
 	padding: 20px;
-	background: #0500669c;
-	border: 1px solid #06007a;
+	background: #fff2b7;
+	border: 1px solid #ffe365;
 	width: 415px;
 	border-radius: 12px;
 	z-index: 200;
@@ -107,7 +122,7 @@ body{
 #janelaEdicaoFundo{
 	position: fixed;
 	top: 0;
-	background-color: #0500669c;
+	background-color: #fff2b7bd;
 	bottom: 0;
 	left: 0;
 	opacity: 0.8;
@@ -122,15 +137,15 @@ body{
 }
 
 #janelaEdicaoBtnFechar{
-    position: absolute;
+	position: absolute;
 	top: 14px;
 	right: 15px;
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
-	border: 1px solid #06007a ;
-	background: #06007a;
-	color: #fff;
+	border: 1px solid #f1d34c ;
+	background: #fff2b7;
+	color: rgb(0, 0, 0);
 	cursor: pointer;
 
 }
@@ -155,19 +170,19 @@ form{
 	padding: 15px;
 	border-radius: 12px;
 	outline: none;
-	border: #06007a;
+	border: #fdcf00;
 	font-size: 1.2rem;
-	background: #120d53;
-	color: #fff; 
+	background: #fdde55;
+	color: rgb(0, 0, 0); 
 }
 
 .fmr-linha button{
-	background: #04004D;
-	border: 1px solid #06007a;
+	background: #fdde55;
+	border: 1px solid #fdcf00;
 	padding: 7px;
 	margin-bottom: 10px;
 	border-radius: 12px;
-	color: #fff;
+	color: rgb(0, 0, 0);
 	cursor: pointer;
 	height: 50px;
 	font-size: 1.3rem;
@@ -175,5 +190,6 @@ form{
 }
 
 .fmr-linha button:hover{
-	background: #06007a;
+	background: #fff45b;
 }
+
